# ai-dev-tools

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: build-push.yml
docs/: architecture.md  configuration.md  formicary-integration.md  k8s-deployment.md  setup.md
formicary/: ai-gh-implement.yaml  ai-gh-issue-picker.yaml  ai-jira-implement.yaml  ai-jira-issue-picker.yaml
k8s/: gh-issue-picker-cron.yaml  gh-pipeline-job.yaml  jira-issue-picker-cron.yaml  jira-pipeline-job.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secrets.yaml.example  single-step-job.yaml
scripts/common/: artifacts.py  bitbucket_api.py  claude_runner.py  config.py  git_utils.py  jira_api.py  label_utils.py  shell.py
scripts/gh/: cleanup.py  create_pr.py  implement.py  issue_picker.py  launch_pipeline.py  learn.py  plan.py  poll_pr.py
scripts/jira/: create_pr.py  implement.py  issue_picker.py  launch_pipeline.py  learn.py  plan.py  poll_pr.py
scripts/standup/: bb_helpers.py  gather_gh.py  gather_jira.py  post.py  slack_client.py  synthesize.py
tests/: conftest.py  test_artifacts.py  test_claude_runner.py  test_config.py  test_gh_issue_picker.py  test_gh_plan.py  test_git_utils.py  test_label_utils.py  test_standup_gather_gh.py  test_standup_gather_jira.py  test_standup_post.py  test_standup_slack_client.py  test_standup_synthesize.py
